changed the plot with the pressure variations and reviewed one more time the letters to the reviewers

--- a/reviews/reviewer-2.tex
+++ b/reviews/reviewer-2.tex
@@ -84,7 +84,7 @@ This has been corrected. Thank you.
 \color{blue}
 2. lines 160-163: To justify the study of the low Mach regime, the authors postulate that since the residual of the entropy equation is small (the solution being smooth) then the variations of the entropy with respect to its mean value is also small, so that the denominator in (6a) vanishes. This should be discussed.}
 
-Deriving the limit of the ratio of the entropy residual to the variation of the entropy with respect to its mean value is not simple: it requires a power expansion of each term. We agree that in some cases that would have to be identified, the ratio may admit a finite limit. We opted for a different expression of the entropy residual so that we have control over the denominator which ensures the correct limit in the low-Mach asymptotic limit. 
+Deriving the limit of the ratio of the entropy residual to the variation of the entropy with respect to its mean value does not seem simple to us. It would require a power expansion of each term. We agree that in some cases that would have to be identified, the ratio may admit a finite limit. We opted for a different expression of the entropy residual so that we have control over the denominator and thus over the limit of the ratio in the low-Mach asymptotic limit. 
 \bigskip
 
 
@@ -102,7 +102,7 @@ Using the stiffened gas law, we derived $\frac{s_e}{P_e} = \frac{\gamma-1}{P+P_\
 5. The definition of the entropy viscosity is rather complex, since not only based on  the entropy residual as in the native form of the EVM but also on  the "inter-element jump" and so, in the formulation (10) proposed by the authors, on two of these jumps, for the pressure and the density. On the basis of the numerical experiments, it  would be of interest to know which of the 3 terms in the numerator of (10) is really active.  Moreover, rather than essentially repeating in (10b) the eq. (10a), it would be clearer to use the viscosity coefficient in the definition of the diffusion coefficient.
 }
 
-We modify the definition of the viscosity coefficients in (10a) and (10b). Thank you. We also added a sentence in the paper to explain when the terms involved in the definition of the viscosity coefficients become active (lines 197-199). 
+We modify the definition of the viscosity coefficients in (10a) and (10b). Thank you. We also added a sentence in the paper to explain when the terms involved in the definition of the viscosity coefficients become active (lines 197-199).
 \bigskip
 
 
@@ -120,7 +120,7 @@ When deriving the non-dimensionalized equations with the first-order viscosity c
 7. section 6.6: in this example I understand that one focuses on the steady solution. What are then the fluctuations defined in eq. 40 and shown in the graph of Fig. 7?
 }
 
-We changed the term 'fluctuation' to 'variation' to make it clearer and also modified the labels of Fig 7. We are looking at the \emph{steady-state} spatial variations of pressure for different inlet Mach numbers.
+We changed the term 'fluctuation' to 'variation' to make it clearer and also modified the labels of Fig 7. We are looking at the \emph{steady-state} spatial variations of pressure for different inlet Mach numbers using Eq. 40.
 \bigskip
 
 
