--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -608,7 +608,7 @@ transonic and supersonic flows.
 The first step in defining viscosity coefficients that behave well in the low-Mach limit is to recast 
 the entropy residual in terms of thermodynamic variables. This provides physical insight on possible 
 normalization choices that can be valid in both low-Mach and transonic flows. The alternate definition 
-of the entropy residual, the derivation of which is given in Appendix A, is the following: %in \eqt{eq:ent_res}. The derivation that leads to this equation is provided in \app{app:ent_res}. 
+of the entropy residual, the derivation of which is given in \app{app:ent_res}, is the following: %in \eqt{eq:ent_res}. The derivation that leads to this equation is provided in \app{app:ent_res}. 
 %
 \begin{equation}
 \label{eq:ent_res}
@@ -618,7 +618,7 @@ of the entropy residual, the derivation of which is given in Appendix A, is the 
 where $\matder{\ }$ denotes the material derivative ($\matder{\ }:= \frac{\partial }{\partial t} + \vec{u} \cdot \grad $), and $x_y$ 
 is the standard shorthand notation for the partial derivative of $x$ with respect to $y$, e.g., $P_e:=\frac{\partial P}{\partial e}$. 
 %
-For isntance, when employing the ideal gas equation of state, the proportionality coefficient $\frac{s_e}{P_e}$ simply is $\frac{s_e}{P_e} = \frac{C_v ( \gamma-1)}{P}$. Note that the definition of the speed of sound, $c^2 = \left. \frac{\partial P}{\partial \rho} \right|_s$, can be used to show that $\resinew$ is zero in isentropic flow regions. The entropy residuals $\resi$ and $\resinew$ are proportional to one another and will experience similar 
+For instance, when employing the ideal gas equation of state, the proportionality coefficient $\frac{s_e}{P_e}$ simply is $\frac{s_e}{P_e} = \frac{C_v ( \gamma-1)}{P}$. Note that the definition of the speed of sound, $c^2 = \left. \frac{\partial P}{\partial \rho} \right|_s$, can be used to show that $\resinew$ is zero in isentropic flow regions. The entropy residuals $\resi$ and $\resinew$ are proportional to one another and will experience similar 
 variations in space and time. Thus, one may elect to employ $\resinew$ instead of $\resi$ for the evaluation 
 of the local entropy residual. The new expression presents several advantages which include:
 %
@@ -2084,7 +2084,7 @@ The research was carried out under the auspices the Idaho National Laboratory fo
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Derivation of the entropy residual as a function of density, pressure and speed of sound} \label{app:ent_res}
+\section{Derivation of the entropy residual as a function of density, pressure, and speed of sound} \label{app:ent_res}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -2282,7 +2282,7 @@ or known to be positive. Thus, the entropy minimum principle holds.
 \section{Entropy residual for isentropic flows} \label{app:ise_equ}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\tcr{I cannot find a reference to this appendix in the main body of the manuscript. Add one.\\}
 This appendix shows that the entropy residual is zero for isentropic flows. For convenience, we recall
 here the entropy residual as a function of the pressure, density, velocity, and speed of sound:
 %
