--- a/reviews/editor-letter-after-review.tex
+++ b/reviews/editor-letter-after-review.tex
@@ -20,7 +20,7 @@ College Station, TX
 
 \begin{document}
 
-\begin{letter}{Professor Patrick Bontoux, \  Editor,\\
+\begin{letter}{Professor Pierre Sagaut, \\  Editor-in-Chief,\\
     Computers \& Fluids,\\
 \textbf{Re: CAF-D-14-00634}}
 
@@ -29,7 +29,7 @@ College Station, TX
 %%%%%% More vertical space can be added here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %         \vspace{3.0cm}
 
-\opening{Dear Dr. Bontoux,}
+\opening{Dear Professor Pierre Sagaut,}
          \vspace{0.25cm}
 %%%%%% More vertical space can be added here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
