modified paper and letter to reviewer according to your remarks

--- a/ANS-winter2014/7Eqn_ANS_2014/ANS_2014_TrackingID_11663.tex
+++ b/ANS-winter2014/7Eqn_ANS_2014/ANS_2014_TrackingID_11663.tex
@@ -220,7 +220,7 @@ R_{\alpha,k}^K(x_q,t) =   \frac{1}{2} \left( \frac{\partial \alpha_{k}^2}{\parti
 \end{equation} 
 \end{subequations}
 % 
-amd $J^K_\alpha$ denotes the inter element jump of the gradient of the volume fraction.
+and $J^K_\alpha$ denotes the inter element jump of the gradient of the volume fraction.
 %where $s_{\alpha,k} = \alpha_k^2/2$ can be interpreted as the entropy function associated to the volume fraction equation of phase $k$. Once again, $J^K_\alpha$ %denotes the inter element jump of the gradient of the volume fraction.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
