--- a/reviews/reviewer-2.tex
+++ b/reviews/reviewer-2.tex
@@ -98,7 +98,7 @@ However, we noted that a more general formulation could be obtained for the entr
 }
 
 \tcr{he asked for IGEOS, so let's use that. Your formula here is not the same as in the manuscript. There is a Cv added. Also, I think I have Cv/P only.\\}
-For instance, using the ideal gas law, one has $\frac{s_e}{P_e} = \frac{\gamma-1}{P}$,  which means that the multiplicative coefficient remains positive and also justifies the use of a normalization parameter of same units as pressure. Also, it is easy to see with the definition of the sound speed, $c^2 = \frac{\partial P}{\partial \rho}_s$, that $\tilde{R} = \frac{DP}{Dt}-c^2 \frac{D\rho}{Dt}$ is zero when the solution remains smooth/isentropic (a new appendix, Appendix C, has been added to that effect). Thus, $\tilde{R}$ and $R$ will be both peaked in shock regions.
+For instance, using the ideal gas law, one has $\frac{s_e}{P_e} = \frac{C_v}{P}$,  which means that the multiplicative coefficient remains positive and also justifies the use of a normalization parameter of same units as pressure. Also, it is easy to see with the definition of the sound speed, $c^2 = \frac{\partial P}{\partial \rho}_s$, that $\tilde{R} = \frac{DP}{Dt}-c^2 \frac{D\rho}{Dt}$ is zero when the solution remains smooth/isentropic (a new appendix, Appendix C, has been added to that effect). Thus, $\tilde{R}$ and $R$ will be both peaked in shock regions.
 \bigskip
 
 
