made corrections according to Ray comments

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -36,11 +36,11 @@
   }
 
 @book{Leveque,
-author    = "Leveque R. J.",
+author    = "R J Leveque",
 title     = "Numerical methods for conservation laws",
 year      = "1990",
-publisher = "Basel: Birhauser",
-address   = "Reading, Massachusetts"
+publisher = "Birkhauser",
+address   = "Basel"
 }
 
 @book{Toro,
