forgot to push several days ago

--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -647,7 +647,7 @@ and $\kappa_e$ can be re-defined as follows:
 \end{equation}
 \text{where}
 \begin{equation}
-J^K( t) = \max_{f\in\partial K}  \max_{\vec{r}_q \in f} || \Big( \vec{u}(\vec{r}_q,t) || \max \left( J^K[P](t) \, ,  c^2(\vec{r}_q,t) || J^K[\rho](t) \right) \Big)
+J^K( t) = \max_{f\in\partial K}  \max_{ \vec{r}_q \in f}  \Big( \| \vec{u}(\vec{r}_q,t) \| \max \left( J^K[P](t) \, ,  c^2(\vec{r}_q,t)  J^K[\rho](t) \right) \Big)
 \end{equation}
 \end{subequations}
 %
