--- a/reviews/editor-letter-after-review.tex
+++ b/reviews/editor-letter-after-review.tex
@@ -33,13 +33,13 @@ College Station, TX
          \vspace{0.25cm}
 %%%%%% More vertical space can be added here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Attached please find a revised version of our manuscript entitled
+Please find attached  a revised version of our manuscript entitled
 ``Entropy-based viscous regularization for the multi-dimensional Euler equations in low-Mach and transonic flows''
-by M. Delchini, J. Ragusa and R. Berry for
+by M. Delchini, J. Ragusa, and R. Berry for
 publication in Computers \& Fluids. We appreciate the comments of the reviewers as we
 believe they have allowed us to improve the paper.
 
-We have attached a file of detailed responses for Reviewer \#1 and Reviewer \#2.
+We have attached a file of detailed responses for Reviewer \#2 (Reviewer \#1 did not require a reply).
 We believe that we have adequately addressed all of their questions and hope that our paper will be found suitable for publication.
 
 %In our revision, we have addressed the issues raised by the
@@ -52,7 +52,7 @@ We believe that we have adequately addressed all of their questions and hope tha
 \bigskip
 
 We remain available for any further questions, should there be any.
-\vspace{0.25cm}
+%\vspace{0.25cm}
 
 
 %%%%%% More vertical space can be added here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
