--- a/reviews/reviewer-2.tex
+++ b/reviews/reviewer-2.tex
@@ -97,8 +97,7 @@ However, we noted that a more general formulation could be obtained for the entr
 3. lines 185-188: In eq. (9), it is assumed that $\tilde{R}$ and the entropy residual R vary similarly. It would be nice to go into the details, by explaining, e.g. on the basis of the perfect gas law, how behaves the multiplicative coefficient in (9). 
 }
 
-\tcr{he asked for IGEOS, so let's use that. Your formula here is not the same as in the manuscript. There is a Cv added. Also, I think I have Cv/P only.\\}
-For instance, using the ideal gas law, one has $\frac{s_e}{P_e} = \frac{C_v}{P}$,  which means that the multiplicative coefficient remains positive and also justifies the use of a normalization parameter of same units as pressure. Also, it is easy to see with the definition of the sound speed, $c^2 = \frac{\partial P}{\partial \rho}_s$, that $\tilde{R} = \frac{DP}{Dt}-c^2 \frac{D\rho}{Dt}$ is zero when the solution remains smooth/isentropic (a new appendix, Appendix C, has been added to that effect). Thus, $\tilde{R}$ and $R$ will be both peaked in shock regions.
+For instance, using the ideal gas law, one has $\frac{s_e}{P_e} = \frac{C_v}{P}$,  which means that the multiplicative coefficient remains positive and further justifies the use of a normalization parameter of same units as pressure. Also, it is easy to see from the definition of the sound speed, $c^2 = \frac{\partial P}{\partial \rho}_s$, that $\tilde{R} = \frac{DP}{Dt}-c^2 \frac{D\rho}{Dt}$ is zero when the solution remains smooth/isentropic (a new appendix, Appendix C, has been added to that effect). In shock regions, both $\tilde{R}$ and $R$ will be peaked as the density/pressure variables can change rapidly.
 \bigskip
 
 
@@ -107,7 +106,7 @@ For instance, using the ideal gas law, one has $\frac{s_e}{P_e} = \frac{C_v}{P}$
 5. The definition of the entropy viscosity is rather complex, since not only based on  the entropy residual as in the native form of the EVM but also on  the "inter-element jump" and so, in the formulation (10) proposed by the authors, on two of these jumps, for the pressure and the density. On the basis of the numerical experiments, it  would be of interest to know which of the 3 terms in the numerator of (10) is really active.  Moreover, rather than essentially repeating in (10b) the eq. (10a), it would be clearer to use the viscosity coefficient in the definition of the diffusion coefficient.
 }
 
-Thank you for pointing this out. We have re-formulated the definition of the viscosity coefficients in (10a) and (10b) to improve readability. We have also commented on when the jump terms are activated (lines 197-199) \tcr{re-check lines numbers once we truly have a final version}.
+Thank you for pointing this out. We have re-formulated the definition of the viscosity coefficients in (10a) and (10b) to improve readability. We have also commented on when the jump terms are activated (lines 197-199) \tcr{re-check lines numbers once we truly have a final version, after Ray's final comments}.
 \bigskip
 
 
@@ -116,7 +115,7 @@ Thank you for pointing this out. We have re-formulated the definition of the vis
 6. lines 475-476: The fact that the first order viscosity (FOV)  does not give the correct solution is associated to a scaling problem of the dissipative terms. However, the scaling proposed in the paper only acts on the the viscosity associated to the entropy residual and not on its first order upper bound, which is assumed correct by the authors. This should be discussed.
 }
 
-When deriving the non-dimensionalized equations with the first-order viscosity coefficients, the dissipative terms are ill-scaled since they are multiplied by $\frac{1}{Mach}$. The first-order viscosity (FOV) should only be used in the shock region where it is needed to stabilize the numerical solution. Since in low-Mach zones, the FOV is not expected to be active, we have not adapted the FOV to low-Mach situations. \tcr{Our goal was to emphasize the fact that a FOV-solution may not be correct in low-Mach flows, and thus one should not rely on it as is (as opposed to supersonic situations where using the FOV generally degrades the accuracy of the solution but usually does not lead to a completely erroneous answer.} \tcr{Marco: maybe we should add such a sentence in the MS}.
+When deriving the non-dimensionalized equations with the first-order viscosity coefficients, the dissipative terms are ill-scaled since they are multiplied by $\frac{1}{Mach}$. The first-order viscosity (FOV) should only be used in the shock region where it is needed to stabilize the numerical solution. Since in low-Mach zones, the FOV is not expected to be active, we have not adapted the FOV to low-Mach situations. Our goal was to emphasize the fact that a FOV-solution may not be correct in low-Mach flows, and thus one should not rely on it as is (as opposed to supersonic situations where using the FOV generally degrades the accuracy of the solution but usually does not lead to a completely erroneous answer. \tcr{Marco/Jean: double check we have such an explanation in the MS}.
 \bigskip
 
 
